tests/tests/snapshots/golden__gen__python__ping.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.dockerignore
============================================================
.venv
__pycache__
.pytest_cache
============================================================
Dockerfile
============================================================
FROM python:3.12-slim

WORKDIR /srv

COPY pyproject.toml ./
RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml

COPY app ./app
COPY openapi.json ./

EXPOSE 8000
CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
============================================================
README.md
============================================================
# Ping

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `app/services/`, which is yours.

## Run

```sh
uv sync
uv run uvicorn app.main:app --reload
```

Or bring up the full stack (API):

```sh
docker compose up --build
```

## Test & lint

```sh
uv run pytest
uv run ruff check .
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `app/main.py` | Application assembly | compiler |
| `app/api/` | HTTP routers (one per api) | compiler |
| `app/services/` | Business-logic handlers | **you** |
| `app/workers/` | Queue consumers and scheduled jobs | compiler |
| `app/config.py` | Environment-driven settings | compiler |
============================================================
app/__init__.py
============================================================
"""Ping — generated by CIaC. Structure is compiler-owned;
business logic belongs in `app/services/`."""
============================================================
app/api/__init__.py
============================================================
"""HTTP routers."""
============================================================
app/api/echo.py
============================================================
"""Request pipeline for `api Echo`. Generated by CIaC.

Pipeline: Return
"""

from typing import Any

from fastapi import APIRouter

from app.schemas import Message

router = APIRouter()


@router.post("/echo")
async def echo(
    payload: Message,
) -> dict[str, Any]:
    result = payload

    if isinstance(result, list):
        return {"status": "accepted", "data": [r.model_dump(mode="json") if hasattr(r, "model_dump") else r for r in result]}
    return {
        "status": "accepted",
        "data": result.model_dump(mode="json") if hasattr(result, "model_dump") else result,
    }
============================================================
app/config.py
============================================================
"""Runtime configuration for Ping. Generated by CIaC.

Every value can be overridden through the environment (or an `.env`
file): field names map to upper-cased variables, e.g. `DATABASE_URL`.
"""

from functools import lru_cache

from pydantic_settings import BaseSettings, SettingsConfigDict


class Settings(BaseSettings):
    """Environment-driven settings with development defaults."""

    model_config = SettingsConfigDict(env_file=".env", extra="ignore")


@lru_cache
def get_settings() -> Settings:
    return Settings()
============================================================
app/main.py
============================================================
"""Application assembly for Ping. Generated by CIaC."""

import json
from pathlib import Path
from typing import Any

from fastapi import FastAPI

from app.api.echo import router as echo_router
from app.config import get_settings
from app.state import AppState, set_current



def create_app(state: AppState) -> FastAPI:
    """Assembles this service's FastAPI app against an explicit
    `AppState` (v0.17 M3) -- `AppState.production(...)` for the real
    server (this file's bottom line), `AppState.simulation(...)` for a
    future in-process simulation run (v0.17 M4 onward). Installed
    before any route or lifespan code can run, so every generated
    dependency (`app/db.py`, `app/cache.py`, ...) resolves through this
    one state, never a module-global cache of its own.
    """
    set_current(state)

    app = FastAPI(title="Ping")

    # The document `ciac build` emitted alongside this app (openapi.json,
    # derived straight from the IR) is the single source of truth for the
    # API spec; FastAPI's own auto-generated one would be a second,
    # slightly-different opinion on the same routes.
    openapi_path = Path(__file__).resolve().parent.parent / "openapi.json"

    def _openapi() -> dict[str, Any]:
        if app.openapi_schema is None:
            app.openapi_schema = json.loads(openapi_path.read_text())
        return app.openapi_schema

    app.openapi = _openapi

    @app.get("/health")
    async def health() -> dict[str, str]:
        return {"status": "ok"}


    app.include_router(echo_router)

    return app


app = create_app(AppState.production(get_settings()))
============================================================
app/schemas.py
============================================================
"""Data schemas from the program's `record` declarations. Generated by CIaC."""


from pydantic import BaseModel



class Message(BaseModel):
    id: str
    text: str

============================================================
app/state.py
============================================================
"""The explicit production/simulation dependency-injection boundary
(v0.17 M3). Generated by CIaC.

Every provider module's `get_*` accessor (`app/db.py`, `app/cache.py`,
`app/queue.py`, ...) reads and lazily populates its client(s) here
instead of keeping a private module-global cache -- `AppState` is the
one seam both a real server process and a future simulation run install
themselves through, never a second copy of provider state that could
drift from it.

Two constructors, always explicit -- simulation is never selected by an
environment variable in the normal server binary, and a failed
production connection never falls back to fake state:

    state = AppState.production(settings)   # real provider adapters
    state = AppState.simulation(world)       # in-process fakes (v0.17 M4+)

`AppState.production` builds nothing eagerly; provider clients stay as
lazy as they are today (see `app/db.py`'s own docstring) -- constructing
an `AppState` never requires a running database, cache, or broker.
"""

from __future__ import annotations

import contextvars
from dataclasses import dataclass, field
from typing import Any

from app.config import Settings


@dataclass
class AppState:
    """Every provider client this service's generated code can access,
    keyed by capability instance name where a capability supports more
    than one named instance. Fields are typed `Any` deliberately: the
    concrete client type (an `AsyncEngine`, a `redis.Redis`, ...) is
    each provider module's own concern, not this file's -- `AppState`
    is a storage seam, not a second place those types get declared.
    """

    settings: Settings
    engines: dict[str, Any] = field(default_factory=dict)
    sessionmakers: dict[str, Any] = field(default_factory=dict)
    caches: dict[str, Any] = field(default_factory=dict)
    queue_client: Any | None = None
    jwks_client: Any | None = None
    object_stores: dict[str, Any] = field(default_factory=dict)
    emails: dict[str, Any] = field(default_factory=dict)
    searches: dict[str, Any] = field(default_factory=dict)
    http_clients: dict[str, Any] = field(default_factory=dict)
    world: Any | None = None
    """The M5 checkpoint's simulation seam: `None` in production, a
    caller-supplied "world" object in simulation. `world` is duck-typed
    on purpose -- `app/db.py`'s `get_sessionmaker` needs only
    `world.fake_sessionmaker(instance)`, `app/queue.py`'s `publish`
    needs only `world.publish(subject, payload)`. This checkpoint's own
    driver (`sim/pyrunner/world.py`, not generated) is the concrete
    implementation that proves the shape; it is not the only one a
    future runner could supply."""

    @classmethod
    def production(cls, settings: Settings) -> "AppState":
        """Real provider adapters, built lazily on first access by each
        provider module -- this constructor itself never opens a
        connection."""
        return cls(settings=settings)

    @classmethod
    def simulation(cls, world: Any) -> "AppState":
        """In-process fakes. `world` provides the database/broker seams
        `get_sessionmaker`/`publish` read (see the `world` field above)
        -- everything else on `AppState` (cache, auth, object store,
        email, search, http clients) still raises through the real
        provider modules if exercised, since the M5 checkpoint's
        disclosed scope is database + a minimal broker slice only; the
        remaining capability fakes are M6-M8's job."""
        return cls(settings=Settings(), world=world)


_current: contextvars.ContextVar[AppState] = contextvars.ContextVar("ciac_app_state")


def set_current(state: AppState) -> None:
    """Installs `state` as the active state for this process (or, once
    a multi-service simulation runner exists, this async context --
    `contextvars` propagate per-task, which is what lets a future
    single-process multi-service runner give each service's tasks their
    own `AppState` without a global mutable singleton)."""
    _current.set(state)


def current() -> AppState:
    """The active `AppState` -- set once by `create_app` before any
    request or generated task runs."""
    return _current.get()
============================================================
conftest.py
============================================================
"""Pytest configuration. Generated by CIaC."""

import pytest


@pytest.fixture
def anyio_backend() -> str:
    return "asyncio"
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/127.0.0.1/8000"]
      interval: 1s
      timeout: 3s
      retries: 30
============================================================
openapi.json
============================================================
{
  "components": {
    "schemas": {
      "Message": {
        "properties": {
          "id": {
            "format": "uuid",
            "type": "string"
          },
          "text": {
            "type": "string"
          }
        },
        "required": [
          "id",
          "text"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "Ping",
    "version": "0.1.0"
  },
  "openapi": "3.0.3",
  "paths": {
    "/echo": {
      "post": {
        "operationId": "echo",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/Message"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "$ref": "#/components/schemas/Message"
                    },
                    "status": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "status",
                    "data"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "Success."
          }
        }
      }
    },
    "/health": {
      "get": {
        "operationId": "health",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "status": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "status"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "Liveness check."
          }
        }
      }
    }
  }
}
============================================================
pyproject.toml
============================================================
[project]
name = "ping"
version = "0.1.0"
description = "Generated by CIaC from `service Ping`"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# tests/system/ needs the compose stack up and is run only by
# `ciac verify --system` (from its own directory); plain `pytest`
# must never collect it.
norecursedirs = ["tests/system"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Pinned explicitly, not left to ruff's own default: `ruff>=0.6`
# above has no upper bound, and a newer ruff resolved at generation
# time silently expanded its defaults (bugbear, isort, pyupgrade
# style checks) past what these templates were written to satisfy,
# breaking `ciac verify` on every fresh project (v0.29 M1 finding
# F4). This is ruff's own long-documented default selection --
# pinning it here makes the templates immune to ruff's own default
# ever moving again.
select = ["E4", "E7", "E9", "F"]
============================================================
tests/test_smoke.py
============================================================
"""Smoke tests generated by CIaC.

These run without any infrastructure: clients are lazy and the ASGI
transport below does not trigger the startup lifespan.
"""

import httpx
import pytest

from app.main import app


def _client(*, raise_app_exceptions: bool = True) -> httpx.AsyncClient:
    transport = httpx.ASGITransport(app=app, raise_app_exceptions=raise_app_exceptions)
    return httpx.AsyncClient(transport=transport, base_url="http://test")


def test_routes_registered() -> None:
    paths = set(app.openapi()["paths"])
    assert "/echo" in paths
    assert "/health" in paths


@pytest.mark.anyio
async def test_health() -> None:
    async with _client() as client:
        response = await client.get("/health")
    assert response.status_code == 200
    assert response.json() == {"status": "ok"}
