tests/tests/snapshots/golden__gen__python__realtime-progress.snap
---
source: tests/tests/golden.rs
expression: project_dump(&project)
---
============================================================
.dockerignore
============================================================
.venv
__pycache__
.pytest_cache
============================================================
Dockerfile
============================================================
FROM python:3.12-slim

WORKDIR /srv

COPY pyproject.toml ./
RUN pip install --no-cache-dir uv && uv pip install --system -r pyproject.toml

COPY app ./app
COPY openapi.json ./

EXPOSE 8000
CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
============================================================
README.md
============================================================
# ProgressFeed

Generated by [CIaC](https://github.com/jrcalgo/ciac) — do not edit the
compiler-owned wiring by hand; regenerate it from the `.ciac` source
instead. Business logic lives in `app/services/`, which is yours.

## Run

```sh
uv sync
uv run uvicorn app.main:app --reload
```

Or bring up the full stack (API, NATS):

```sh
docker compose up --build
```

## Test & lint

```sh
uv run pytest
uv run ruff check .
```

## Layout

| Path | Purpose | Owner |
|------|---------|-------|
| `app/main.py` | Application assembly | compiler |
| `app/api/` | HTTP routers (one per api) | compiler |
| `app/services/` | Business-logic handlers | **you** |
| `app/workers/` | Queue consumers and scheduled jobs | compiler |
| `app/config.py` | Environment-driven settings | compiler |
============================================================
app/__init__.py
============================================================
"""ProgressFeed — generated by CIaC. Structure is compiler-owned;
business logic belongs in `app/services/`."""
============================================================
app/api/__init__.py
============================================================
"""HTTP routers."""
============================================================
app/api/channel_progress.py
============================================================
"""Realtime channel `Progress`. Generated by CIaC."""
from fastapi import APIRouter, WebSocket, WebSocketDisconnect
from app.queue import get_client
from app.schemas import Video

router = APIRouter()
SUBJECT = "progress_feed.transcoded"


def _decode(data: bytes) -> dict:
    return Video.model_validate_json(data).model_dump(mode="json")
@router.websocket("/channels/progress")
async def progress(socket: WebSocket) -> None:
    await socket.accept()
    client = await get_client()
    subscription = await client.subscribe(SUBJECT)
    try:
        async for message in subscription.messages:
            await socket.send_json(_decode(message.data))
    except WebSocketDisconnect:
        pass
    finally:
        await subscription.unsubscribe()
============================================================
app/api/complete.py
============================================================
"""Request pipeline for `api Complete`. Generated by CIaC.

Pipeline: publish progress_feed.transcoded -> Return
"""

from typing import Any

from fastapi import APIRouter

from app.queue import publish
from app.schemas import Video

router = APIRouter()


@router.post("/complete")
async def complete(
    payload: Video,
) -> dict[str, Any]:
    result = payload

    await publish("progress_feed.transcoded", result.model_dump(mode="json"))
    return {"status": "accepted", "data": result.model_dump(mode="json")}
============================================================
app/config.py
============================================================
"""Runtime configuration for ProgressFeed. Generated by CIaC.

Every value can be overridden through the environment (or an `.env`
file): field names map to upper-cased variables, e.g. `DATABASE_URL`.
"""

from functools import lru_cache

from pydantic_settings import BaseSettings, SettingsConfigDict


class Settings(BaseSettings):
    """Environment-driven settings with development defaults."""

    model_config = SettingsConfigDict(env_file=".env", extra="ignore")
    nats_url: str = "nats://localhost:4222"


@lru_cache
def get_settings() -> Settings:
    return Settings()
============================================================
app/main.py
============================================================
"""Application assembly for ProgressFeed. Generated by CIaC."""

import json
from pathlib import Path
from typing import Any

from fastapi import FastAPI

from app.api.complete import router as complete_router
from app.api.channel_progress import router as channel_progress_router
from app.config import get_settings
from app.state import AppState, set_current



def create_app(state: AppState) -> FastAPI:
    """Assembles this service's FastAPI app against an explicit
    `AppState` (v0.17 M3) -- `AppState.production(...)` for the real
    server (this file's bottom line), `AppState.simulation(...)` for a
    future in-process simulation run (v0.17 M4 onward). Installed
    before any route or lifespan code can run, so every generated
    dependency (`app/db.py`, `app/cache.py`, ...) resolves through this
    one state, never a module-global cache of its own.
    """
    set_current(state)

    app = FastAPI(title="ProgressFeed")

    # The document `ciac build` emitted alongside this app (openapi.json,
    # derived straight from the IR) is the single source of truth for the
    # API spec; FastAPI's own auto-generated one would be a second,
    # slightly-different opinion on the same routes.
    openapi_path = Path(__file__).resolve().parent.parent / "openapi.json"

    def _openapi() -> dict[str, Any]:
        if app.openapi_schema is None:
            app.openapi_schema = json.loads(openapi_path.read_text())
        return app.openapi_schema

    app.openapi = _openapi

    @app.get("/health")
    async def health() -> dict[str, str]:
        return {"status": "ok"}


    app.include_router(complete_router)
    app.include_router(channel_progress_router)

    return app


app = create_app(AppState.production(get_settings()))
============================================================
app/queue.py
============================================================
"""NATS queue access. Generated by CIaC.

`publish` pipeline steps send JSON payloads to their stream's subject;
workers consume their bound stream in per-worker queue groups (see
`app/workers/`). The connection is established lazily on first publish.
"""

import json
from typing import Any

import nats
from nats.aio.client import Client

from app.config import get_settings
from app.state import current


async def get_client() -> Client:
    state = current()
    if state.queue_client is None or state.queue_client.is_closed:
        state.queue_client = await nats.connect(get_settings().nats_url)
    return state.queue_client


async def publish(subject: str, payload: dict[str, Any]) -> None:
    if current().world is not None:
        # v0.17 M5: the checkpoint's minimal broker port.
        await current().world.publish(subject, payload)
        return
    client = await get_client()
    await client.publish(subject, json.dumps(payload).encode())
============================================================
app/schemas.py
============================================================
"""Data schemas from the program's `record` declarations. Generated by CIaC."""

from typing import Literal

from pydantic import BaseModel



class Video(BaseModel):
    id: str
    status: Literal["Ready", "Failed"]

============================================================
app/state.py
============================================================
"""The explicit production/simulation dependency-injection boundary
(v0.17 M3). Generated by CIaC.

Every provider module's `get_*` accessor (`app/db.py`, `app/cache.py`,
`app/queue.py`, ...) reads and lazily populates its client(s) here
instead of keeping a private module-global cache -- `AppState` is the
one seam both a real server process and a future simulation run install
themselves through, never a second copy of provider state that could
drift from it.

Two constructors, always explicit -- simulation is never selected by an
environment variable in the normal server binary, and a failed
production connection never falls back to fake state:

    state = AppState.production(settings)   # real provider adapters
    state = AppState.simulation(world)       # in-process fakes (v0.17 M4+)

`AppState.production` builds nothing eagerly; provider clients stay as
lazy as they are today (see `app/db.py`'s own docstring) -- constructing
an `AppState` never requires a running database, cache, or broker.
"""

from __future__ import annotations

import contextvars
from dataclasses import dataclass, field
from typing import Any

from app.config import Settings


@dataclass
class AppState:
    """Every provider client this service's generated code can access,
    keyed by capability instance name where a capability supports more
    than one named instance. Fields are typed `Any` deliberately: the
    concrete client type (an `AsyncEngine`, a `redis.Redis`, ...) is
    each provider module's own concern, not this file's -- `AppState`
    is a storage seam, not a second place those types get declared.
    """

    settings: Settings
    engines: dict[str, Any] = field(default_factory=dict)
    sessionmakers: dict[str, Any] = field(default_factory=dict)
    caches: dict[str, Any] = field(default_factory=dict)
    queue_client: Any | None = None
    jwks_client: Any | None = None
    object_stores: dict[str, Any] = field(default_factory=dict)
    emails: dict[str, Any] = field(default_factory=dict)
    searches: dict[str, Any] = field(default_factory=dict)
    http_clients: dict[str, Any] = field(default_factory=dict)
    world: Any | None = None
    """The M5 checkpoint's simulation seam: `None` in production, a
    caller-supplied "world" object in simulation. `world` is duck-typed
    on purpose -- `app/db.py`'s `get_sessionmaker` needs only
    `world.fake_sessionmaker(instance)`, `app/queue.py`'s `publish`
    needs only `world.publish(subject, payload)`. This checkpoint's own
    driver (`sim/pyrunner/world.py`, not generated) is the concrete
    implementation that proves the shape; it is not the only one a
    future runner could supply."""

    @classmethod
    def production(cls, settings: Settings) -> "AppState":
        """Real provider adapters, built lazily on first access by each
        provider module -- this constructor itself never opens a
        connection."""
        return cls(settings=settings)

    @classmethod
    def simulation(cls, world: Any) -> "AppState":
        """In-process fakes. `world` provides the database/broker seams
        `get_sessionmaker`/`publish` read (see the `world` field above)
        -- everything else on `AppState` (cache, auth, object store,
        email, search, http clients) still raises through the real
        provider modules if exercised, since the M5 checkpoint's
        disclosed scope is database + a minimal broker slice only; the
        remaining capability fakes are M6-M8's job."""
        return cls(settings=Settings(), world=world)


_current: contextvars.ContextVar[AppState] = contextvars.ContextVar("ciac_app_state")


def set_current(state: AppState) -> None:
    """Installs `state` as the active state for this process (or, once
    a multi-service simulation runner exists, this async context --
    `contextvars` propagate per-task, which is what lets a future
    single-process multi-service runner give each service's tasks their
    own `AppState` without a global mutable singleton)."""
    _current.set(state)


def current() -> AppState:
    """The active `AppState` -- set once by `create_app` before any
    request or generated task runs."""
    return _current.get()
============================================================
conftest.py
============================================================
"""Pytest configuration. Generated by CIaC."""

import pytest


@pytest.fixture
def anyio_backend() -> str:
    return "asyncio"
============================================================
docker-compose.yml
============================================================
services:
  app:
    build: .
    ports:
      - "8000:8000"
    healthcheck:
      test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/127.0.0.1/8000"]
      interval: 1s
      timeout: 3s
      retries: 30
    environment:
      NATS_URL: nats://queue:4222
    depends_on:
      queue:
        condition: service_started

  queue:
    image: nats:2
    # Host mapping (v0.13 M2): the generated tests/system delivery and
    # channel tests connect from the host at localhost:4222.
    ports:
      - "4222:4222"
============================================================
openapi.json
============================================================
{
  "components": {
    "schemas": {
      "Video": {
        "properties": {
          "id": {
            "format": "uuid",
            "type": "string"
          },
          "status": {
            "$ref": "#/components/schemas/VideoStatus"
          }
        },
        "required": [
          "id",
          "status"
        ],
        "type": "object"
      },
      "VideoStatus": {
        "enum": [
          "Ready",
          "Failed"
        ],
        "type": "string"
      }
    }
  },
  "info": {
    "title": "ProgressFeed",
    "version": "0.1.0"
  },
  "openapi": "3.0.3",
  "paths": {
    "/complete": {
      "post": {
        "operationId": "complete",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/Video"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "data": {
                      "$ref": "#/components/schemas/Video"
                    },
                    "status": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "status",
                    "data"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "Success."
          }
        }
      }
    },
    "/health": {
      "get": {
        "operationId": "health",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "status": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "status"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "Liveness check."
          }
        }
      }
    }
  }
}
============================================================
pyproject.toml
============================================================
[project]
name = "progress-feed"
version = "0.1.0"
description = "Generated by CIaC from `service ProgressFeed`"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "nats-py>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "anyio>=4.4",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# tests/system/ needs the compose stack up and is run only by
# `ciac verify --system` (from its own directory); plain `pytest`
# must never collect it.
norecursedirs = ["tests/system"]

[tool.ruff]
target-version = "py311"
============================================================
tests/test_smoke.py
============================================================
"""Smoke tests generated by CIaC.

These run without any infrastructure: clients are lazy and the ASGI
transport below does not trigger the startup lifespan.
"""

import httpx
import pytest

from app.main import app


def _client(*, raise_app_exceptions: bool = True) -> httpx.AsyncClient:
    transport = httpx.ASGITransport(app=app, raise_app_exceptions=raise_app_exceptions)
    return httpx.AsyncClient(transport=transport, base_url="http://test")


def test_routes_registered() -> None:
    paths = set(app.openapi()["paths"])
    assert "/complete" in paths
    assert "/health" in paths


@pytest.mark.anyio
async def test_health() -> None:
    async with _client() as client:
        response = await client.get("/health")
    assert response.status_code == 200
    assert response.json() == {"status": "ok"}
